# dns-ci-cd

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dockerimage.yml
dns_cicd/: __init__.py
dns_cicd/scripts/: deploy.sh
dns_cicd/templates/: bind-zones.conf.j2  catalog.zone.j2  knot-zones.conf.j2
