[tool.poetry]
name = "dns-ci-cd"
version = "0.1.0"
description = "DNS CI/CD scripts"
authors = ["Thomas Quinot <thomas@quinot.org>"]
readme = "README.md"
packages = [{include = "dns_cicd"}]

[tool.poetry.scripts]
dns_cicd = "dns_cicd:main"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
jinja2 = "^3.1.2"
rich = "^13.3.5"
dnspython = "^2.3.0"
jinja2-ansible-filters = "^1.3.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
autoflake = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
